--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
     </head>
-    <body role="main">
-        <div id="card">
+    <body>
+        <div role="main" id="card">
             <div id="container">
                 <img src="images/icon-star.svg" alt="">
                 <h1>How did we do?</h1>
