--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 <p>We appreciate you taking the time to give a rating. If you ever need more support, don't hesitate to get in touch!</p>
             </div>
         </div>
+        <footer>
+            Challenge by <a href="https://www.frontendmentor.io/challenges/interactive-rating-component-koxpeBUmI">Frontend Mentor</a>. Coded by <a href="#">Mofe620</a>
+        </footer>
         <script src="script.js" async defer></script>
     </body>
 </html>
